Bug 155932 - Konqueror should use fallback widgets instead of native ones when background images, etc. are set
Summary: Konqueror should use fallback widgets instead of native ones when background ...
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Developers
URL:
Keywords: triaged
: 178301 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-01-16 18:18 UTC by David Benjamin
Modified: 2009-02-26 09:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Benjamin 2008-01-16 18:18:30 UTC
Version:            (using KDE 4.0.0)
Installed from:    Ubuntu Packages
OS:                Linux

Konqueror's rendering of native widgets (which is awesome, by the way. I like to visit websites with buttons simply to see them Oxygen-styled) should fall back to native widgets and websites attempt to style the buttons in complex ways themselves, as the Qt widgets and the website often conflict.

In particular, this happens when background-image is set (or background: none if they size wants a text-looking button.)

Sites to visit (compare Konqueror rendering to that of, e.g., Firefox):
http://www.phpbb.com/ - Click the search bar at the right of the screen. If you click, the focus glow is misaligned.
http://www.phpbb.com/community/ - See login button (underneath the forum). It is oversized, lacks a border, and does funny things on mouse-over.
http://oxygen-icons.org/ - Search button at the upper-right. It is misaligned and has a funny glow on hover. (background: none)

Suggested Change:
When a form widget has background: none or a background image (and perhaps a couple others...), use a simple fallback widget, similar to what Firefox 2 does. Not sure if this should be done on a border color as well. I think the Oxygen buttons look better, but it's less respectful of what the web developer set up. (Then again, the web developer probably based it on Windows where buttons cannot change color.)
Comment 1 Jure Repinc 2008-03-28 18:12:23 UTC
I can confirm this problem with Konqueror 4.00.67 on Thousand Parsec forums: http://forums.thousandparsec.com/
The Search button in the upper right corner and the Login button don't look right.
Comment 2 Jaime Torres 2008-06-05 10:36:33 UTC
It happens also in konqueror 4.1 svn trunk r813735.
Comment 3 Jaime Torres 2008-11-12 16:21:23 UTC
It is much better now in konqueror 4.1.72 (svn trunk r882080):
* the buttons are well located
* the search bars are well aligned

* but the buttons paint a square border around them when the mouse is over them.
Comment 4 Germain Garand 2009-02-04 19:55:40 UTC
SVN commit 921311 by ggarand:

.turn off most of the native styling of submit buttons when a custom border
 is defined in CSS - let khtml do the border styling/hover effects instead.

.emulate effect of a non standard CSS hack intended to make submit button's
 text invisible.

BUG: 155932
BUG: 175743


 M  +90 -37    render_form.cpp  
 M  +8 -1      render_form.h  
 M  +3 -1      render_replaced.cpp  
 M  +1 -0      render_replaced.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=921311
Comment 5 Tommi Tervo 2009-02-05 09:03:50 UTC
*** Bug 178301 has been marked as a duplicate of this bug. ***
Comment 6 Germain Garand 2009-02-05 18:00:09 UTC
SVN commit 921780 by ggarand:

.some refinements to submit button styling
 -use a bigger rect for unstyled button content so the text doesn't get
  mangled if the button is small.
 -adjust size heuristics to be thiner for an unstyled button

.fix painting of lineedit background with custom borders.
 The painted rectangle used to be a bit smaller than the border edge.

CCBUG: 155932


 M  +21 -3     render_form.cpp  
 M  +2 -1      render_form.h  
 M  +1 -1      render_replaced.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=921780
Comment 7 Germain Garand 2009-02-26 09:23:07 UTC
SVN commit 931933 by ggarand:

automatically merged revision 921780:
.some refinements to submit button styling
 -use a bigger rect for unstyled button content so the text doesn't get
  mangled if the button is small.
 -adjust size heuristics to be thiner for an unstyled button

.fix painting of lineedit background with custom borders.
 The painted rectangle used to be a bit smaller than the border edge.

CCBUG: 155932

 M  +21 -3     render_form.cpp  
 M  +2 -1      render_form.h  
 M  +1 -1      render_replaced.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=931933
Comment 8 Germain Garand 2009-02-26 09:23:10 UTC
SVN commit 931931 by ggarand:

merge r921311 + r918150
---
SVN commit 921311 by ggarand:

.turn off most of the native styling of submit buttons when a custom border
 is defined in CSS - let khtml do the border styling/hover effects instead.

.emulate effect of a non standard CSS hack intended to make submit button's
 text invisible.

BUG: 155932
BUG: 175743
---
SVN commit 918150 by gkiagia:

Fix minor memory leak.



 M  +90 -36    render_form.cpp  
 M  +8 -1      render_form.h  
 M  +3 -1      render_replaced.cpp  
 M  +1 -0      render_replaced.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=931931