.turn off most of the native styling of submit buttons when a custom border  is defined in CSS - let khtml do the border styling/hover effects instead.

.emulate effect of a non standard CSS hack intended to make submit button's
 text invisible.

BUG: 155932
BUG: 175743

svn path=/trunk/KDE/kdelibs/; revision=921311